# aur-mirror-meta

./: Cargo.toml  README.md
src/: app_state.rs  aur_fetcher.rs  config.rs  database.rs  main.rs  rpc_server.rs  srcinfo_parse.rs  syncer.rs  types.rs
